# task-tracker

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose-dev.yaml  docker-compose-test.yaml  pyproject.toml  setup.cfg
.github/workflows/: checks.yml
alembic/: env.py
alembic/versions/: 0f0f135ca572_username_unique_true_username_unique_.py  6369a0f9dbfb_initial.py  fae222b6848e_add_surname_field.py
migrations/: env.py
src/: __init__.py  __main__.py  config.py  main.py  run_test_app.py
src/api/: dependencies.py  routers.py
src/api/app_routers/: __init__.py  status_router.py  task_router.py  task_status_router.py  user_router.py
src/api/dependencies/: __init__.py  db.py  services.py
src/db/: db.py  holder.py
src/db/dao/: base_dao.py  status_dao.py  task_dao.py  task_status_dao.py  user_dao.py
src/exceptions/: status_exceptions.py  task_exceptions.py
src/models/: __init__.py  base.py  status.py  task.py  task_status.py  user.py
src/models/dto/: __init__.py  status.py  task.py  user.py
src/repositories/: task_repository.py  task_status_repository.py
src/schemas/: status_schema.py  task_schema.py  task_status_schema.py  user_schema.py
src/services/: status_service.py  task_service.py  task_services.py  task_status_services.py  user_service.py
src/utils/: exceptions.py
src/utils/exceptions/: __init__.py  exc_mappers.py  exceptions.py
src/utils/interfaces/: abstract_repository.py  sqlalchemy_repository.py
tests/: conftest.py  test_main.py
tests/unit/status_endpoints/: test_status.py
(+1 files in other folders)
